--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "matplotlib>=3.10.5",
     "numpy>=2.2.6",
+    "requests>=2.32.4",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "shapely>=2.1.1",
