--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,12 @@ dependencies = [
     "geemap>=0.36.1",
     "geopandas>=1.1.1",
     "ipykernel>=6.30.1",
+    "joblib>=1.5.2",
     "matplotlib>=3.10.5",
     "numpy>=2.2.6",
+    "numpy-financial>=1.0.0",
     "requests>=2.32.4",
+    "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "shapely>=2.1.1",
