--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "matplotlib>=3.10.5",
     "numpy>=2.2.6",
     "numpy-financial>=1.0.0",
+    "pyyaml>=6.0.2",
     "requests>=2.32.4",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
