cog rendering with titiler

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,16 @@ dependencies = [
     "numpy>=2.2.6",
     "numpy-financial>=1.0.0",
     "pyyaml>=6.0.2",
+    "rasterio>=1.4.3",
     "requests>=2.32.4",
+    "rio-tiler>=7.9.2",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "shapely>=2.1.1",
     "streamlit>=1.48.1",
     "streamlit-folium>=0.25.1",
+    "titiler-core>=0.24.2",
+    "titiler[all]>=0.24.2",
+    "uvicorn>=0.38.0",
 ]
