--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.10"
 dependencies = [
     "altair>=5.5.0",
     "earthengine-api>=1.6.4",
+    "fiona>=1.10.1",
     "folium>=0.20.0",
     "geemap>=0.36.1",
     "geopandas>=1.1.1",
+    "geopy>=2.4.1",
     "ipykernel>=6.30.1",
     "joblib>=1.5.2",
     "matplotlib>=3.10.5",
