--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "altair>=5.5.0",
+    "brand-yml>=0.1.1",
     "earthengine-api>=1.6.4",
     "folium>=0.20.0",
     "geemap>=0.36.1",
@@ -15,7 +16,10 @@ dependencies = [
     "matplotlib>=3.10.5",
     "numpy>=2.2.6",
     "numpy-financial>=1.0.0",
+    "pyfonts>=1.1.3",
     "pyyaml>=6.0.2",
+    "quarto>=0.1.0",
+    "quarto-cli>=1.8.25",
     "requests>=2.32.4",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
@@ -23,4 +27,9 @@ dependencies = [
     "shapely>=2.1.1",
     "streamlit>=1.48.1",
     "streamlit-folium>=0.25.1",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
 ]
