--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "altair>=5.5.0",
     "earthengine-api>=1.6.4",
+    "fastapi>=0.124.4",
     "fiona>=1.10.1",
     "folium>=0.20.0",
     "geemap>=0.36.1",
