--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "joblib>=1.5.2",
     "matplotlib>=3.10.5",
+    "mlflow>=3.7.0",
     "numpy>=2.2.6",
     "numpy-financial>=1.0.0",
     "pyyaml>=6.0.2",
