--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "matplotlib>=3.10.5",
     "numpy>=2.2.6",
     "numpy-financial>=1.0.0",
+    "pandas>=2.3.1",
+    "pillow>=11.3.0",
     "pyyaml>=6.0.2",
+    "quarto>=0.1.0",
     "requests>=2.32.4",
     "scikit-learn>=1.7.2",
     "scipy>=1.15.3",
