fix dependency issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "aiofiles>=25.1.0",
     "altair>=5.5.0",
     "earthengine-api>=1.6.4",
     "fastapi>=0.124.4",
