--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "aiofiles>=25.1.0",
     "altair>=5.5.0",
+    "dataframe-image>=0.2.7",
     "earthengine-api>=1.6.4",
     "fastapi>=0.124.4",
     "fiona>=1.10.1",
@@ -19,6 +20,8 @@ dependencies = [
     "matplotlib>=3.10.5",
     "numpy>=2.2.6",
     "numpy-financial>=1.0.0",
+    "pandas>=2.3.1",
+    "pillow>=11.3.0",
     "pyyaml>=6.0.2",
     "requests>=2.32.4",
     "scikit-learn>=1.7.2",
@@ -27,5 +30,6 @@ dependencies = [
     "shapely>=2.1.1",
     "streamlit>=1.48.1",
     "streamlit-folium>=0.25.1",
+    "tabulate>=0.9.0",
     "uvicorn>=0.38.0",
 ]
