--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ pages/_archive/*
 model_service/quarto/.quarto/*
 model_service/quarto/_archive/*
 model_service/quarto/data/*
-model_service/quarto/data/fig/*
+!model_service/quarto/data/fig/
+!model_service/quarto/data/fig/*
 model_service/quarto/reports/*
 model_service/quarto/reports/report_files/*
